# Scenario-Weaver

./: .gitignore  2026-01-02_plugin_system.md  AI_AGENT_PROMPT.md  CLAUDE.md  CREATING_SCENARIOS.md  Cargo.toml  DELIVERABLES.md  DOCUMENTATION_COMPLETE.md  Implementation_plan.md  PROMPT_FOR_AI.txt  QUICK_START.md  README.md  clippy.toml  cutin_plot_02_ve0_60_dv0_20_dx0_0.0_vy_0.1.xodr  cutin_plot_02_ve0_60_dv0_20_dx0_0.0_vy_0.1.xosc  design_decisions.md  final_test.json  final_test.xosc  log.txt  openscenario-rs-improvements.md  pedestrian_bug.md  run_examples.sh  rustfmt.toml  test_scenario.json  test_scenario.xosc
cutin_left/: scenario.json  scenario.xosc  scenario_0.json  scenario_0.xosc  scenario_1.json  scenario_1.xosc  scenario_2.json  scenario_2.xosc  scenario_3.json  scenario_3.xosc  scenario_4.json  scenario_4.xosc  scenario_5.json  scenario_5.xosc  scenario_6.json  scenario_6.xosc  scenario_7.json  scenario_7.xosc  scenario_8.json  scenario_8.xosc  scenario_9.json  scenario_9.xosc
docs/: CREATING_SCENARIOS.md  USER_GUIDE.md  adversarial-generation.md  architecture.md  coordinate-systems.md  optimizer.md  output-formats.md  scenario-types.md  z3_constraints.md
examples/: README.md  bicycle_lane_change.yaml  bicycle_lane_change_simple.yaml  bicycle_minimal.yaml  bicycle_straight.yaml  both_directions_safe.yaml  crossroads.yaml  cut_in_left.yaml  cut_in_left_adversarial_all.yaml  cut_in_left_adversarial_ttc.yaml  cut_in_left_bicycle.yaml  cut_in_left_cartesian.yaml  cut_in_left_fixed_ego.yaml  cut_in_left_optimize_max_ttc.yaml  cut_in_left_optimize_min_distance.yaml  cut_in_left_optimize_min_severity.yaml  cut_in_left_optimize_min_ttc.yaml  cut_in_right.yaml  cut_in_right_bicycle.yaml  cut_in_right_cartesian.yaml  expected_output.json  frenet_lane_change.yaml  head_on_collision.yaml  head_on_near_miss.yaml  multi_lane_safety.yaml  overtake_in_backward_lane.yaml  overtake_left.yaml  overtake_with_opposite.yaml  pedestrian_crossing.yaml  school_zone.yaml  simple_bidirectional.yaml  smooth_lane_change_cartesian.yaml  speed_limit_violation.yaml  t_junction.yaml  unsafe_following.yaml  with_import.yaml
final_test/: scenario_0.json  scenario_0.xosc  scenario_1.json  scenario_1.xosc  scenario_2.json  scenario_2.xosc  scenario_3.json  scenario_3.xosc  scenario_4.json  scenario_4.xosc  scenario_5.json  scenario_5.xosc  scenario_6.json  scenario_6.xosc  scenario_7.json  scenario_7.xosc  scenario_8.json  scenario_8.xosc
final_test_new.xosc/: scenario_0.json  scenario_0.xosc  scenario_1.json  scenario_1.xosc  scenario_2.json  scenario_2.xosc  scenario_3.json  scenario_3.xosc  scenario_4.json  scenario_4.xosc
final_test_overtake/: scenario_0.json  scenario_0.ol.json  scenario_0.xodr  scenario_0.xosc  scenario_1.json  scenario_1.ol.json  scenario_1.xodr  scenario_1.xosc  scenario_2.json  scenario_2.ol.json  scenario_2.xosc  scenario_3.json  scenario_3.xosc  scenario_4.json  scenario_4.xosc  scenario_5.json  scenario_5.xosc  scenario_6.json  scenario_6.xosc  scenario_7.json  scenario_7.xosc  scenario_8.json  scenario_8.xosc  scenario_9.json  scenario_9.xosc
plans/: README.md  phase_01_setup.md  phase_02_dsl.md  phase_03_ltl.md  phase_04_scenario_model.md  phase_05_z3_foundation.md  phase_06_z3_physics.md  phases_7_to_12_summary.md
roads/: 2_lane_rural.yaml  3_lane_highway.yaml  4_lane_bidirectional.yaml
src/: error.rs  lib.rs  main.rs
tests/: api_error_paths_test.rs  bicycle_export_test.rs  bidirectional_test.rs  cartesian_physics_test.rs  comprehensive_test.rs  constraint_modes_test.rs  examples_smoke_test.rs  export_coverage_test.rs  head_on_test.rs  integration_test.rs  optimizer_test.rs  road_import_test.rs
(+116 files in other folders)
