[package]
name = "scenario-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scenario-gen"
path = "src/main.rs"

[lib]
name = "scenario_generator"
path = "src/lib.rs"

[dependencies]
# Z3 SMT Solver - core constraint solving
# Using system Z3 library instead of static linking
z3 = "0.19"

# Serialization - YAML input, JSON output
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }     # Timestamps
uuid = { version = "1.6", features = ["v4", "serde"] } # Scenario IDs
anyhow = "1.0"                                         # Error handling convenience
thiserror = "2.0"                                      # Custom error types

# CLI (will be used in Phase 12)
clap = { version = "4.4", features = ["derive"] }

# Logging (will be used in Phase 12)
tracing = "0.1"
tracing-subscriber = "0.3"
openscenario-rs = { git = "https://github.com/ashfaqfarooqui/openscenario-rs", version = "0.3.0", features = [
    "builder",
] }

# SVG visualization
svg = "0.18"

# GIF animation
image = "0.25"     # Image manipulation
gif = "0.14"       # GIF encoding
imageproc = "0.26" # Text rendering
ab_glyph = "0.2"   # Font loading (compatible with imageproc)

# Linear algebra for Frenet coordinate transformations
nalgebra = { version = "0.33", features = ["serde"] }

# OpenDRIVE (.xodr) road network export
opendrive = "0.1"
vec1 = "1.8"
uom = { version = "0.32", features = ["f64"] }

[dev-dependencies]
pretty_assertions = "1.4" # Better test output
tempfile = "3.8"          # Temporary files for testing

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
# Enable useful lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Warn on problematic patterns (not deny, to avoid blocking existing code)
unwrap_used = "warn"
expect_used = "warn"

# Allow reasonable exceptions from pedantic
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"
if_not_else = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
redundant_closure_for_method_calls = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
